target/generated-sources/antlr4/RDPParser.java
// Generated from RDP.g4 by ANTLR 4.5.3
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class RDPParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5.3", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, DECLARE=29, ENDDECLARE=30, METHOD=31, 
		ENDMETHOD=32, NAME=33, BIGNAME=34, NUMBER=35, LEFT=36, RIGHT=37, MAIN=38, 
		ENDMAIN=39, WS=40, LINEBREAK=41, VAR=42, UNCON=43, LEFTBRAQUET=44, RIGHTTBRAQUET=45, 
		BINCON=46, COMMENT=47, STRING=48;
	public static final int
		RULE_rdp = 0, RULE_declare = 1, RULE_method = 2, RULE_main = 3, RULE_callmethod = 4, 
		RULE_linebreak = 5, RULE_list = 6, RULE_from = 7, RULE_variable = 8, RULE_var = 9, 
		RULE_bincon = 10, RULE_uncon = 11, RULE_logicalinput = 12, RULE_read = 13, 
		RULE_write = 14, RULE_writeln = 15, RULE_get = 16, RULE_push = 17, RULE_pop = 18, 
		RULE_set = 19, RULE_returne = 20, RULE_ife = 21, RULE_fore = 22, RULE_truetable = 23, 
		RULE_istautology = 24, RULE_isElentmondas = 25, RULE_isKielegitheto = 26;
	public static final String[] ruleNames = {
		"rdp", "declare", "method", "main", "callmethod", "linebreak", "list", 
		"from", "variable", "var", "bincon", "uncon", "logicalinput", "read", 
		"write", "writeln", "get", "push", "pop", "set", "returne", "ife", "fore", 
		"truetable", "istautology", "isElentmondas", "isKielegitheto"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'method'", "'->'", "'list'", "'='", "'from'", "'VAR'", "'true'", 
		"'false'", "'read'", "'write'", "'\"'", "'writeln'", "'get'", "'push'", 
		"','", "'pop'", "'set'", "'return'", "'if'", "'then'", "'else'", "'end'", 
		"'for'", "'in'", "'truthtable'", "'isTautology'", "'isEllentmondas'", 
		"'isKielegitheto'", "'DECLARE'", "'END DECLARE'", "'METHOD'", "'END METHOD'", 
		null, null, null, "'('", "')'", "'MAIN'", "'END MAIN'", null, null, null, 
		"'-'", "'['", "']'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, "DECLARE", "ENDDECLARE", "METHOD", "ENDMETHOD", 
		"NAME", "BIGNAME", "NUMBER", "LEFT", "RIGHT", "MAIN", "ENDMAIN", "WS", 
		"LINEBREAK", "VAR", "UNCON", "LEFTBRAQUET", "RIGHTTBRAQUET", "BINCON", 
		"COMMENT", "STRING"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "RDP.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public RDPParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class RdpContext extends ParserRuleContext {
		public DeclareContext declare() {
			return getRuleContext(DeclareContext.class,0);
		}
		public MainContext main() {
			return getRuleContext(MainContext.class,0);
		}
		public List<MethodContext> method() {
			return getRuleContexts(MethodContext.class);
		}
		public MethodContext method(int i) {
			return getRuleContext(MethodContext.class,i);
		}
		public RdpContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_rdp; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RDPListener ) ((RDPListener)listener).enterRdp(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RDPListener ) ((RDPListener)listener).exitRdp(this);
		}
	}

	public final RdpContext rdp() throws RecognitionException {
		RdpContext _localctx = new RdpContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_rdp);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(54);
			declare();
			setState(58);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==METHOD) {
				{
				{
				setState(55);
				method();
				}
				}
				setState(60);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(61);
			main();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclareContext extends ParserRuleContext {
		public TerminalNode DECLARE() { return getToken(RDPParser.DECLARE, 0); }
		public TerminalNode ENDDECLARE() { return getToken(RDPParser.ENDDECLARE, 0); }
		public List<FromContext> from() {
			return getRuleContexts(FromContext.class);
		}
		public FromContext from(int i) {
			return getRuleContext(FromContext.class,i);
		}
		public List<ListContext> list() {
			return getRuleContexts(ListContext.class);
		}
		public ListContext list(int i) {
			return getRuleContext(ListContext.class,i);
		}
		public List<VariableContext> variable() {
			return getRuleContexts(VariableContext.class);
		}
		public VariableContext variable(int i) {
			return getRuleContext(VariableContext.class,i);
		}
		public DeclareContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declare; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RDPListener ) ((RDPListener)listener).enterDeclare(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RDPListener ) ((RDPListener)listener).exitDeclare(this);
		}
	}

	public final DeclareContext declare() throws RecognitionException {
		DeclareContext _localctx = new DeclareContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_declare);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(63);
			match(DECLARE);
			setState(69);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__2) | (1L << T__4) | (1L << T__5))) != 0)) {
				{
				setState(67);
				switch (_input.LA(1)) {
				case T__4:
					{
					setState(64);
					from();
					}
					break;
				case T__2:
					{
					setState(65);
					list();
					}
					break;
				case T__5:
					{
					setState(66);
					variable();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(71);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(72);
			match(ENDDECLARE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MethodContext extends ParserRuleContext {
		public TerminalNode METHOD() { return getToken(RDPParser.METHOD, 0); }
		public TerminalNode NAME() { return getToken(RDPParser.NAME, 0); }
		public TerminalNode LEFT() { return getToken(RDPParser.LEFT, 0); }
		public TerminalNode RIGHT() { return getToken(RDPParser.RIGHT, 0); }
		public DeclareContext declare() {
			return getRuleContext(DeclareContext.class,0);
		}
		public MainContext main() {
			return getRuleContext(MainContext.class,0);
		}
		public TerminalNode ENDMETHOD() { return getToken(RDPParser.ENDMETHOD, 0); }
		public List<FromContext> from() {
			return getRuleContexts(FromContext.class);
		}
		public FromContext from(int i) {
			return getRuleContext(FromContext.class,i);
		}
		public List<ListContext> list() {
			return getRuleContexts(ListContext.class);
		}
		public ListContext list(int i) {
			return getRuleContext(ListContext.class,i);
		}
		public MethodContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_method; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RDPListener ) ((RDPListener)listener).enterMethod(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RDPListener ) ((RDPListener)listener).exitMethod(this);
		}
	}

	public final MethodContext method() throws RecognitionException {
		MethodContext _localctx = new MethodContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_method);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(74);
			match(METHOD);
			setState(75);
			match(NAME);
			setState(76);
			match(LEFT);
			setState(80);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__4) {
				{
				{
				setState(77);
				from();
				}
				}
				setState(82);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(86);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__2) {
				{
				{
				setState(83);
				list();
				}
				}
				setState(88);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(89);
			match(RIGHT);
			setState(90);
			declare();
			setState(91);
			main();
			setState(92);
			match(ENDMETHOD);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MainContext extends ParserRuleContext {
		public TerminalNode MAIN() { return getToken(RDPParser.MAIN, 0); }
		public TerminalNode ENDMAIN() { return getToken(RDPParser.ENDMAIN, 0); }
		public ReturneContext returne() {
			return getRuleContext(ReturneContext.class,0);
		}
		public List<ReadContext> read() {
			return getRuleContexts(ReadContext.class);
		}
		public ReadContext read(int i) {
			return getRuleContext(ReadContext.class,i);
		}
		public List<WriteContext> write() {
			return getRuleContexts(WriteContext.class);
		}
		public WriteContext write(int i) {
			return getRuleContext(WriteContext.class,i);
		}
		public List<WritelnContext> writeln() {
			return getRuleContexts(WritelnContext.class);
		}
		public WritelnContext writeln(int i) {
			return getRuleContext(WritelnContext.class,i);
		}
		public List<GetContext> get() {
			return getRuleContexts(GetContext.class);
		}
		public GetContext get(int i) {
			return getRuleContext(GetContext.class,i);
		}
		public List<PushContext> push() {
			return getRuleContexts(PushContext.class);
		}
		public PushContext push(int i) {
			return getRuleContext(PushContext.class,i);
		}
		public List<PopContext> pop() {
			return getRuleContexts(PopContext.class);
		}
		public PopContext pop(int i) {
			return getRuleContext(PopContext.class,i);
		}
		public List<CallmethodContext> callmethod() {
			return getRuleContexts(CallmethodContext.class);
		}
		public CallmethodContext callmethod(int i) {
			return getRuleContext(CallmethodContext.class,i);
		}
		public List<SetContext> set() {
			return getRuleContexts(SetContext.class);
		}
		public SetContext set(int i) {
			return getRuleContext(SetContext.class,i);
		}
		public List<ForeContext> fore() {
			return getRuleContexts(ForeContext.class);
		}
		public ForeContext fore(int i) {
			return getRuleContext(ForeContext.class,i);
		}
		public List<IfeContext> ife() {
			return getRuleContexts(IfeContext.class);
		}
		public IfeContext ife(int i) {
			return getRuleContext(IfeContext.class,i);
		}
		public List<TruetableContext> truetable() {
			return getRuleContexts(TruetableContext.class);
		}
		public TruetableContext truetable(int i) {
			return getRuleContext(TruetableContext.class,i);
		}
		public List<IstautologyContext> istautology() {
			return getRuleContexts(IstautologyContext.class);
		}
		public IstautologyContext istautology(int i) {
			return getRuleContext(IstautologyContext.class,i);
		}
		public List<IsElentmondasContext> isElentmondas() {
			return getRuleContexts(IsElentmondasContext.class);
		}
		public IsElentmondasContext isElentmondas(int i) {
			return getRuleContext(IsElentmondasContext.class,i);
		}
		public List<IsKielegithetoContext> isKielegitheto() {
			return getRuleContexts(IsKielegithetoContext.class);
		}
		public IsKielegithetoContext isKielegitheto(int i) {
			return getRuleContext(IsKielegithetoContext.class,i);
		}
		public List<TerminalNode> NAME() { return getTokens(RDPParser.NAME); }
		public TerminalNode NAME(int i) {
			return getToken(RDPParser.NAME, i);
		}
		public MainContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_main; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RDPListener ) ((RDPListener)listener).enterMain(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RDPListener ) ((RDPListener)listener).exitMain(this);
		}
	}

	public final MainContext main() throws RecognitionException {
		MainContext _localctx = new MainContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_main);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(94);
			match(MAIN);
			setState(112);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__8) | (1L << T__9) | (1L << T__11) | (1L << T__12) | (1L << T__13) | (1L << T__15) | (1L << T__16) | (1L << T__18) | (1L << T__22) | (1L << T__24) | (1L << T__25) | (1L << T__26) | (1L << T__27) | (1L << NAME))) != 0)) {
				{
				setState(110);
				switch (_input.LA(1)) {
				case T__8:
					{
					setState(95);
					read();
					}
					break;
				case T__9:
					{
					setState(96);
					write();
					}
					break;
				case T__11:
					{
					setState(97);
					writeln();
					}
					break;
				case T__12:
					{
					setState(98);
					get();
					}
					break;
				case T__13:
					{
					setState(99);
					push();
					}
					break;
				case T__15:
					{
					setState(100);
					pop();
					}
					break;
				case T__0:
					{
					setState(101);
					callmethod();
					}
					break;
				case T__16:
					{
					setState(102);
					set();
					}
					break;
				case T__22:
					{
					setState(103);
					fore();
					}
					break;
				case T__18:
					{
					setState(104);
					ife();
					}
					break;
				case T__24:
					{
					setState(105);
					truetable();
					}
					break;
				case T__25:
					{
					setState(106);
					istautology();
					}
					break;
				case T__26:
					{
					setState(107);
					isElentmondas();
					}
					break;
				case T__27:
					{
					setState(108);
					isKielegitheto();
					}
					break;
				case NAME:
					{
					setState(109);
					match(NAME);
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(114);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(117);
			switch (_input.LA(1)) {
			case T__17:
				{
				setState(115);
				returne();
				}
				break;
			case ENDMAIN:
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(119);
			match(ENDMAIN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CallmethodContext extends ParserRuleContext {
		public List<TerminalNode> NAME() { return getTokens(RDPParser.NAME); }
		public TerminalNode NAME(int i) {
			return getToken(RDPParser.NAME, i);
		}
		public TerminalNode LEFT() { return getToken(RDPParser.LEFT, 0); }
		public TerminalNode RIGHT() { return getToken(RDPParser.RIGHT, 0); }
		public TerminalNode VAR() { return getToken(RDPParser.VAR, 0); }
		public CallmethodContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_callmethod; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RDPListener ) ((RDPListener)listener).enterCallmethod(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RDPListener ) ((RDPListener)listener).exitCallmethod(this);
		}
	}

	public final CallmethodContext callmethod() throws RecognitionException {
		CallmethodContext _localctx = new CallmethodContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_callmethod);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(121);
			match(T__0);
			setState(122);
			match(NAME);
			setState(123);
			match(LEFT);
			setState(127);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==NAME) {
				{
				{
				setState(124);
				match(NAME);
				}
				}
				setState(129);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(130);
			match(RIGHT);
			setState(134);
			switch (_input.LA(1)) {
			case T__1:
				{
				{
				setState(131);
				match(T__1);
				setState(132);
				_la = _input.LA(1);
				if ( !(_la==NAME || _la==VAR) ) {
				_errHandler.recoverInline(this);
				} else {
					consume();
				}
				}
				}
				break;
			case T__0:
			case T__8:
			case T__9:
			case T__11:
			case T__12:
			case T__13:
			case T__15:
			case T__16:
			case T__17:
			case T__18:
			case T__22:
			case T__24:
			case T__25:
			case T__26:
			case T__27:
			case NAME:
			case ENDMAIN:
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LinebreakContext extends ParserRuleContext {
		public TerminalNode LINEBREAK() { return getToken(RDPParser.LINEBREAK, 0); }
		public LinebreakContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_linebreak; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RDPListener ) ((RDPListener)listener).enterLinebreak(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RDPListener ) ((RDPListener)listener).exitLinebreak(this);
		}
	}

	public final LinebreakContext linebreak() throws RecognitionException {
		LinebreakContext _localctx = new LinebreakContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_linebreak);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(136);
			match(LINEBREAK);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ListContext extends ParserRuleContext {
		public TerminalNode NAME() { return getToken(RDPParser.NAME, 0); }
		public List<FromContext> from() {
			return getRuleContexts(FromContext.class);
		}
		public FromContext from(int i) {
			return getRuleContext(FromContext.class,i);
		}
		public ListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_list; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RDPListener ) ((RDPListener)listener).enterList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RDPListener ) ((RDPListener)listener).exitList(this);
		}
	}

	public final ListContext list() throws RecognitionException {
		ListContext _localctx = new ListContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_list);
		try {
			int _alt;
			setState(149);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,11,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(138);
				match(T__2);
				setState(139);
				match(NAME);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(140);
				match(T__2);
				setState(141);
				match(NAME);
				setState(142);
				match(T__3);
				setState(146);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,10,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(143);
						from();
						}
						} 
					}
					setState(148);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,10,_ctx);
				}
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FromContext extends ParserRuleContext {
		public TerminalNode NAME() { return getToken(RDPParser.NAME, 0); }
		public BinconContext bincon() {
			return getRuleContext(BinconContext.class,0);
		}
		public UnconContext uncon() {
			return getRuleContext(UnconContext.class,0);
		}
		public VarContext var() {
			return getRuleContext(VarContext.class,0);
		}
		public FromContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_from; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RDPListener ) ((RDPListener)listener).enterFrom(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RDPListener ) ((RDPListener)listener).exitFrom(this);
		}
	}

	public final FromContext from() throws RecognitionException {
		FromContext _localctx = new FromContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_from);
		try {
			setState(162);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,13,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(151);
				match(T__4);
				setState(152);
				match(NAME);
				setState(153);
				match(T__3);
				setState(158);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,12,_ctx) ) {
				case 1:
					{
					setState(154);
					bincon();
					}
					break;
				case 2:
					{
					setState(155);
					uncon();
					}
					break;
				case 3:
					{
					setState(156);
					var();
					}
					break;
				case 4:
					{
					}
					break;
				}
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(160);
				match(T__4);
				setState(161);
				match(NAME);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VariableContext extends ParserRuleContext {
		public VarContext var() {
			return getRuleContext(VarContext.class,0);
		}
		public VariableContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variable; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RDPListener ) ((RDPListener)listener).enterVariable(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RDPListener ) ((RDPListener)listener).exitVariable(this);
		}
	}

	public final VariableContext variable() throws RecognitionException {
		VariableContext _localctx = new VariableContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_variable);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(164);
			match(T__5);
			setState(165);
			var();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VarContext extends ParserRuleContext {
		public TerminalNode VAR() { return getToken(RDPParser.VAR, 0); }
		public VarContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_var; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RDPListener ) ((RDPListener)listener).enterVar(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RDPListener ) ((RDPListener)listener).exitVar(this);
		}
	}

	public final VarContext var() throws RecognitionException {
		VarContext _localctx = new VarContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_var);
		int _la;
		try {
			setState(172);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,14,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				{
				setState(167);
				match(VAR);
				setState(168);
				match(T__3);
				setState(169);
				_la = _input.LA(1);
				if ( !(_la==T__6 || _la==T__7) ) {
				_errHandler.recoverInline(this);
				} else {
					consume();
				}
				}
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(170);
				match(VAR);
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BinconContext extends ParserRuleContext {
		public TerminalNode BINCON() { return getToken(RDPParser.BINCON, 0); }
		public List<VarContext> var() {
			return getRuleContexts(VarContext.class);
		}
		public VarContext var(int i) {
			return getRuleContext(VarContext.class,i);
		}
		public List<UnconContext> uncon() {
			return getRuleContexts(UnconContext.class);
		}
		public UnconContext uncon(int i) {
			return getRuleContext(UnconContext.class,i);
		}
		public List<BinconContext> bincon() {
			return getRuleContexts(BinconContext.class);
		}
		public BinconContext bincon(int i) {
			return getRuleContext(BinconContext.class,i);
		}
		public BinconContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_bincon; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RDPListener ) ((RDPListener)listener).enterBincon(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RDPListener ) ((RDPListener)listener).exitBincon(this);
		}
	}

	public final BinconContext bincon() throws RecognitionException {
		BinconContext _localctx = new BinconContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_bincon);
		try {
			setState(189);
			switch (_input.LA(1)) {
			case LEFT:
				enterOuterAlt(_localctx, 1);
				{
				{
				setState(174);
				match(LEFT);
				setState(178);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,15,_ctx) ) {
				case 1:
					{
					setState(175);
					var();
					}
					break;
				case 2:
					{
					setState(176);
					uncon();
					}
					break;
				case 3:
					{
					setState(177);
					bincon();
					}
					break;
				}
				setState(180);
				match(BINCON);
				setState(184);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,16,_ctx) ) {
				case 1:
					{
					setState(181);
					var();
					}
					break;
				case 2:
					{
					setState(182);
					uncon();
					}
					break;
				case 3:
					{
					setState(183);
					bincon();
					}
					break;
				}
				setState(186);
				match(RIGHT);
				}
				}
				break;
			case T__2:
			case T__4:
			case T__5:
			case ENDDECLARE:
			case RIGHT:
			case BINCON:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
